test/libsolidity/syntaxTests/dataLocations/externalFunction/function_argument_location_specifier_test_external_memory.sol
contract test {
    function f(bytes memory) external;
}
// ----
// TypeError: (31-36): Storage location must be none or "calldata" for parameter in external function, but "memory" was given.
